--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 @font-face {
-  font-family: "MemphisRiver";
-  src: url(fonts/MemphisRiver.ttf) format("truetype");
-}
-
-@font-face {
-  font-family: "RobloxBold";
-  src: url(fonts/Roblox-Font-Bold.ttf) format("truetype");
+  font-family: "OpenSansLight";
+  src: url(fonts/OpenSans-Light.ttf) format("truetype");
 }
 
 body {
@@ -28,14 +23,10 @@ body {
 }
 p {
   font-size: 6em;
-  font-family: "RobloxBold", sans-serif;
+  font-family: "OpenSansLight", sans-serif;
   font-weight: bold;
 }
 
-p1 {
-  font-family: "MemphisRiver", sans-serif;
-  font-size: 7em;
-}
 h1,
 h2 {
   margin: 0;
